--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
   - "3.6"
   - "3.7"
 install:
-  - pip install -r requirements.txt test-requirements.txt
+  - pip install -r requirements.txt -r test-requirements.txt
 before_script:
   - pytest --version
 script:
